# LetterGuesser

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  config.py  context.py  letterguesser.spec  main.py  pyproject.toml  tox.ini
.github/workflows/: bundle.yml  linter.yml  pytests.yml  test.yml  typechecker.yml
assets/texts/: en.txt
gui/: __init__.py
gui/frames/: AttemptsList.py  AttemptsTable.py  BaseFrame.py  BaseScrollFrame.py  BaseTable.py  HeaderFrame.py  InputFrame.py  LeftFrame.py  MainFrame.py  ProbabilityTable.py  RightFrame.py  StatusFrame.py  __init__.py
gui/widgets/: Button.py  ButtonGroup.py  Card.py  CardGoup.py  InputBlock.py  List.py  ListItem.py  OptionMenu.py  TextBlockSegment.py  __init__.py
lang/: en.json  uk.json
letterguesser/: __init__.py  __main__.py  config.py  context.py  main.py
letterguesser/gui/: __init__.py
letterguesser/gui/frames/: AttemptsList.py  BaseFrame.py  BaseScrollFrame.py  BaseTable.py  HeaderFrame.py  InputFrame.py  LeftFrame.py  MainFrame.py  ProbabilityTable.py  RightFrame.py  StatusFrame.py  __init__.py
letterguesser/gui/widgets/: Button.py  ButtonGroup.py  Card.py  CardGoup.py  InputBlock.py  List.py  ListItem.py  OptionMenu.py  TextBlockSegment.py  (+1 more)
letterguesser/logic/: Controller.py  Event.py  ExperimentManager.py  Localisation.py  __init__.py  utils.py
letterguesser/styles/: __init__.py  buttons.py  colors.py  font.py  padding.py
logic/: ExperimentManger.py  Localisation.py  utils.py
styles/: __init__.py  colors.py  font.py  widget.py
tests/: test_localisation.py  test_manager.py
(+6 files in other folders)
